--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,9 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+*{box-sizing: border-box;margin: 0;padding: 0;font-family: 'Poppins', sans-serif;}
+html{scroll-behavior: smooth;}
+body{margin: 0;padding: 0;font-family: 'Montserrat',sans-serif;}
+::-webkit-scrollbar{width: 4px;height: 80px;}
+::-webkit-scrollbar-track{background: #222A35;}
+::-webkit-scrollbar-thumb{background: #575C66;border-radius: 6px;}
+::-webkit-scrollbar-thumb:hover{background: #626970;}
